package edu.hitsz.aircraft;

public interface EnemyFactory {
    public abstract AbstractEnemy createEnemy();
}
